# nba_trades_constructor

./: README.md  pyproject.toml  pyscript.toml
data/: cap_levels.json  salaries.json
nba_trades_constructor/: app.py  extract.py  utils.py
